--- a/css/xiaomi.css
+++ b/css/xiaomi.css
@@ -2,7 +2,7 @@
 * @Author: lenovo
 * @Date:   2018-08-02 16:47:00
 * @Last Modified by:   lenovo
-* @Last Modified time: 2018-08-07 17:41:02
+* @Last Modified time: 2018-08-09 20:20:33
 */
 *{
 	margin:0px;
@@ -10,7 +10,6 @@
 	box-sizing: border-box;
 	list-style: none;
 	text-decoration: none;
-/* 	font-family: "微软雅黑"; */
 }
 .rightbar{
 	width: 27px;
@@ -89,13 +88,13 @@
 	margin: 10px 3px;
 	width: 20px;
 	height: 20px;
-	background-image: url('../img/小米/z.png');
+	background-image: url('../img/xiaomi/z.png');
 	background-size: cover;
 	background-position: center;
 
 }
 .rightbar .sticky:hover .img{
-	background-image: url('../img/小米/z1.png');
+	background-image: url('../img/xiaomi/z1.png');
 }
 .mi{
 	width: 100%;
@@ -258,12 +257,12 @@
 .head .contain .right input.two:focus {
 	background-color: #ff6700;
 	border-color: #ff6700;
-	background-image: url('../img/小米/搜索2.png');
+	background-image: url('../img/xiaomi/sousuo2.png');
 }
 .head .contain .right input.two{
 	width:50px;
 	height:50px;
-	background-image: url('../img/小米/搜索.png');
+	background-image: url('../img/xiaomi/sousuo.png');
 	background-position: center;
 	background-size: 25px 25px;
 	background-color: #fff;
@@ -272,7 +271,7 @@
 .head .contain .right input.two:hover {
 	background-color: #ff6700;
 	border-color: #ff6700;
-	background-image: url('../img/小米/搜索2.png');
+	background-image: url('../img/xiaomi/sousuo2.png');
 }
 .banner{
 	width: 1226px;
@@ -694,13 +693,6 @@
 .goods ul li:nth-child(9){
 	margin-right: 0;
 }
-/* .goods ul li.bottom{
-	width: 234px;
-	height: 100px;
-	text-align: center;
-	background-color: pink;
-	margin: 0 auto;
-} */
 .goods ul li .price{
 	height: 20px;
 	text-align: center;
@@ -726,9 +718,11 @@
 .goods ul li  .two{
 	color:#b0b0b0;
 	font-size: 12px;
-	height: 18px;
+	height: 22px;
 	margin: 0 10px 10px;
 	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 .goods ul li .three{
 	color:#ff6700;
@@ -793,7 +787,6 @@
 	margin: 0px 14px 14px 0;
 	text-align: center;
 	transition: all 0.5s;
-	/* 相对定位 */
 	position: relative;
 	overflow: hidden;
 }
@@ -905,6 +898,9 @@
 	font-size: 12px;
 	height: 18px;
 	margin: 0 10px 10px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 .goods1 ul li .three{
 	color:#ff6700;
